--- a/.env
+++ b/.env
@@ -1,14 +1,14 @@
 # Postgres configuration
-PGHOST=10.164.0.124
+PGHOST=postgresvc.postgres.database.azure.com
 PGUSERNAME=postgres
 PGDATABASE=postgres
 PGPASSWORD=p@ssw0rd42
 PGPORT=5432
 #Node Weight Tracker
-HOST_URL=http://35.204.98.157:8080
+HOST_URL=http://20.62.108.232:8080
 COOKIE_ENCRYPT_PWD=superAwesomePasswordStringThatIsAtLeast32CharactersLong!
 NODE_ENV=development
 # Okta configuration
 OKTA_ORG_URL=https://dev-90406841.okta.com
-OKTA_CLIENT_ID=0oa1mu28unNGPWfsC5d7
-OKTA_CLIENT_SECRET=Y8pONzvJLcxazbv-1VyLuQprzqAa19hORDdV20GA
+OKTA_CLIENT_ID=0oa29i78ccIWWZvt95d7
+OKTA_CLIENT_SECRET=uI8QZ-7ic7_jGq4JlBaOV6ulo8D5MtREsEz54c5x
