--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # Postgres configuration
 PGHOST=postgresvc.postgres.database.azure.com
-PGUSERNAME=postgres
+PGUSERNAME=postgres@postgresvc
 PGDATABASE=postgres
 PGPASSWORD=p@ssw0rd42
 PGPORT=5432
