--- a/.env
+++ b/.env
@@ -1,14 +1,14 @@
 # Postgres configuration
-PGHOST=10.164.0.124
-PGUSERNAME=postgres
-PGDATABASE=postgres
-PGPASSWORD=p@ssw0rd42
+PGHOST=< pg host >
+PGUSERNAME=< pg user name >
+PGDATABASE=< pg database >
+PGPASSWORD=< pg password >
 PGPORT=5432
 #Node Weight Tracker
-HOST_URL=http://35.204.98.157:8080
-COOKIE_ENCRYPT_PWD=superAwesomePasswordStringThatIsAtLeast32CharactersLong!
+HOST_URL=< host url >
+COOKIE_ENCRYPT_PWD=< cookie password >
 NODE_ENV=development
 # Okta configuration
-OKTA_ORG_URL=https://dev-90406841.okta.com
-OKTA_CLIENT_ID=0oa1mu28unNGPWfsC5d7
-OKTA_CLIENT_SECRET=Y8pONzvJLcxazbv-1VyLuQprzqAa19hORDdV20GA
+OKTA_ORG_URL=< okta url >
+OKTA_CLIENT_ID=< okta client id >
+OKTA_CLIENT_SECRET=< okta client secret >
