--- a/.env
+++ b/.env
@@ -1,14 +1,14 @@
 # Postgres configuration
-PGHOST=postgresvc.postgres.database.azure.com
-PGUSERNAME=postgres@postgresvc
-PGDATABASE=postgres
-PGPASSWORD=p@ssw0rd42
+PGHOST=< pg host >
+PGUSERNAME=< pg user name >
+PGDATABASE=< pg database >
+PGPASSWORD=< pg password >
 PGPORT=5432
 #Node Weight Tracker
-HOST_URL=http://20.62.108.232:8080
-COOKIE_ENCRYPT_PWD=superAwesomePasswordStringThatIsAtLeast32CharactersLong!
+HOST_URL=< host url >
+COOKIE_ENCRYPT_PWD=< cookie password >
 NODE_ENV=development
 # Okta configuration
-OKTA_ORG_URL=https://dev-90406841.okta.com
-OKTA_CLIENT_ID=0oa29i78ccIWWZvt95d7
-OKTA_CLIENT_SECRET=uI8QZ-7ic7_jGq4JlBaOV6ulo8D5MtREsEz54c5x
+OKTA_ORG_URL=< okta url >
+OKTA_CLIENT_ID=< okta client id >
+OKTA_CLIENT_SECRET=< okta client secret >
